<resources>
    <string name="app_name">Axis</string>
    <string name="title_activity_dashboard_de_usuario">DashboardDeUsuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrador</string>
    <string name="nav_header_subtitle">Globalaxis@gmail.com</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="configuracion">Configuracion</string>
    <string name="cedula">Cedula</string>
    <string name="prueba_de_comunicacion">Prueba de Comunicacion</string>
    <string name="logon">Logon</string>
    <string name="salir">Salir</string>
    <string name="mensajeSwipe">Bienvenido deslize hacia arriba</string>
    <string name="avance_de_pago">Avance de Pago</string>
    <string name="reversar_pago">Reversar Pago</string>
    <string name="cierre_de_lotes">Cierre de Lotes</string>
    <string name="copia_de_recibo">Copia de Recibo</string>
    <string name="reportes">Reportes</string>
    <string name="nTarjeta">Número de la tarjeta</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="datos_de_tarjeta">Datos de tarjeta</string>
    <string name="ccv">CCV</string>
    <string name="btnaceptar">Aceptar</string>
    <string name="btnregresar">Regresar</string>
    <string name="procesar_transacciones">PROCESAR TRANSACCIONES</string>
    <string name="btnotros">Otros</string>
    <string name="tajeta_de_credito">Tajeta de credito</string>

</resources>
