<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/avancedepago"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/avance_de_pago" />
        <item
            android:id="@+id/ReversarPago"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/reversar_pago" />
        <item
            android:id="@+id/CierredeLotes"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/cierre_de_lotes" />
        <item
            android:id="@+id/CopiaDeRecibo"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/copia_de_recibo" />
        <item
            android:id="@+id/Reportes"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/reportes" />
    </group>


</menu>
